--- a/src/views/Main.fxml
+++ b/src/views/Main.fxml
@@ -4,38 +4,52 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="577.0" prefWidth="665.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.Home">
+<AnchorPane prefHeight="660.0" prefWidth="950.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.Home">
    <children>
-      <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-         <children>
+      <BorderPane AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <center>
             <TableView fx:id="tableDeliveries" prefHeight="530.0" prefWidth="622.0">
               <columns>
-                <TableColumn fx:id="tableColumnDepartureTime" prefWidth="141.0" text="Departure Time" />
-                <TableColumn fx:id="tableColumnPickupClient" prefWidth="136.0" text="Pickup Client" />
-                  <TableColumn fx:id="tableColumnRequestedPickupTime" prefWidth="153.0" text="Requested Pickup Time" />
-                  <TableColumn fx:id="tableColumnDeliveryClient" prefWidth="106.0" text="Delivery Client" />
-                  <TableColumn fx:id="tableColumnCourier" prefWidth="127.0" text="Courier" />
+                <TableColumn fx:id="tableColumnDepartureTime" prefWidth="177.0" text="Departure Time" />
+                <TableColumn fx:id="tableColumnPickupClient" prefWidth="154.39996337890625" text="Pickup Client" />
+                  <TableColumn fx:id="tableColumnRequestedPickupTime" prefWidth="151.0" text="Requested Pickup Time" />
+                  <TableColumn fx:id="tableColumnDeliveryClient" prefWidth="161.60003662109375" text="Delivery Client" />
+                  <TableColumn fx:id="tableColumnCourier" prefWidth="142.79998779296875" text="Courier" />
               </columns>
             </TableView>
-            <HBox alignment="TOP_CENTER" prefHeight="74.0" prefWidth="665.0">
+         </center>
+         <bottom>
+            <HBox alignment="TOP_CENTER" prefWidth="950.0" spacing="10.0" BorderPane.alignment="CENTER">
                <children>
                   <Button fx:id="buttonViewTicket" mnemonicParsing="false" text="View Ticket">
                      <HBox.margin>
                         <Insets top="10.0" />
-                     </HBox.margin></Button>
-                  <ImageView fitHeight="94.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
+                     </HBox.margin>
+                  </Button>
                   <Button fx:id="buttonAssignCourier" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" text="Assign Courier">
                      <HBox.margin>
                         <Insets top="10.0" />
-                     </HBox.margin></Button>
+                     </HBox.margin>
+                  </Button>
                </children>
             </HBox>
-         </children>
-      </VBox>
+         </bottom>
+         <top>
+            <TitledPane alignment="CENTER" animated="false" collapsible="false" expanded="false" text="Today's Deliveries" textAlignment="CENTER" BorderPane.alignment="CENTER">
+              <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+              </content>
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </TitledPane>
+         </top>
+      </BorderPane>
    </children>
 </AnchorPane>
