--- a/src/views/EditCourier.fxml
+++ b/src/views/EditCourier.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -13,43 +14,59 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" >
+<AnchorPane prefHeight="660.0" prefWidth="950.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <VBox alignment="CENTER" prefHeight="300.0" prefWidth="600.0" spacing="10.0">
+      <TitledPane alignment="CENTER" animated="false" collapsible="false" expanded="false" text="Edit Courier" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font>
+      </TitledPane>
+      <VBox alignment="CENTER" prefHeight="400.0" prefWidth="950.0" spacing="10.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
          <children>
-            <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="27.0" prefWidth="325.0" text="Edit Courier" textAlignment="CENTER">
-               <font>
-                  <Font name="System Bold" size="18.0" />
-               </font>
-            </Label>
-            <GridPane hgap="5.0" prefHeight="220.0" prefWidth="323.0" vgap="5.0">
+            <GridPane alignment="CENTER" hgap="10.0" minWidth="460.0" prefHeight="209.0" prefWidth="534.0" vgap="5.0">
                <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints fillWidth="false" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                </columnConstraints>
                <rowConstraints>
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER" />
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                </rowConstraints>
                <children>
-                  <Label text="Name" GridPane.rowIndex="1" />
-                  <Label text="Number" />
-                  <TextField fx:id="textFieldCourierNumber" GridPane.columnIndex="1" />
-                  <Label text="Phone Number" GridPane.rowIndex="2" />
-                  <Label text="Is Active" GridPane.rowIndex="3" />
+                  <Label text="Name" GridPane.rowIndex="1">
+                     <padding>
+                        <Insets left="300.0" />
+                     </padding>
+                  </Label>
+                  <Label text="Number">
+                     <padding>
+                        <Insets left="300.0" />
+                     </padding>
+                  </Label>
+                  <TextField fx:id="textFieldCourierNumber" alignment="CENTER_RIGHT" minWidth="295.0" prefHeight="25.0" prefWidth="295.0" GridPane.columnIndex="1" />
+                  <Label text="Phone Number" GridPane.rowIndex="2">
+                     <GridPane.margin>
+                        <Insets left="300.0" />
+                     </GridPane.margin>
+                  </Label>
+                  <Label text="Is Active" GridPane.rowIndex="3">
+                     <GridPane.margin>
+                        <Insets left="300.0" />
+                     </GridPane.margin>
+                  </Label>
                   <CheckBox fx:id="checkBoxCourierIsActive" mnemonicParsing="false" text="Active" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                  <TextField fx:id="textFieldCourierName" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <TextField fx:id="textFieldCourierPhoneNumber" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <TextField fx:id="textFieldCourierName" alignment="CENTER_RIGHT" prefWidth="295.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <TextField fx:id="textFieldCourierPhoneNumber" alignment="CENTER_RIGHT" prefWidth="295.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                </children>
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding>
                <VBox.margin>
-                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                  <Insets />
                </VBox.margin>
             </GridPane>
             <HBox alignment="CENTER" spacing="10.0">
