--- a/src/views/EditUser.fxml
+++ b/src/views/EditUser.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -14,19 +15,14 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="660.0" prefWidth="950.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <VBox alignment="CENTER" prefHeight="300.0" prefWidth="600.0" spacing="10.0">
+      <VBox alignment="CENTER" prefHeight="400.0" prefWidth="950.0" spacing="10.0">
          <children>
-            <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="27.0" prefWidth="325.0" text="Edit User" textAlignment="CENTER">
-               <font>
-                  <Font name="System Bold" size="18.0" />
-               </font>
-            </Label>
             <GridPane hgap="5.0" prefHeight="220.0" prefWidth="323.0" vgap="5.0">
                <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints fillWidth="false" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                </columnConstraints>
                <rowConstraints>
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -37,18 +33,36 @@
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                </rowConstraints>
                <children>
-                  <Label text="Password" GridPane.rowIndex="2" />
-                  <Label text="Username" GridPane.rowIndex="1" />
-                  <Label text="Confirm Passowrd" GridPane.rowIndex="3" />
-                  <Label text="Role" GridPane.rowIndex="4" />
-                  <Label text="Email" GridPane.rowIndex="5" />
-                  <TextField fx:id="textFieldUserUsername" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <TextField fx:id="textFieldUserEmail" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-                  <Label text="Name" />
-                  <TextField fx:id="textFieldUserName" GridPane.columnIndex="1" />
-                  <ComboBox fx:id="comboBoxUserRole" prefHeight="25.0" prefWidth="301.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                  <PasswordField fx:id="textFieldUserPassword" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                  <PasswordField fx:id="textFieldUserPasswordConf" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                  <Label text="Password" GridPane.rowIndex="2">
+                     <GridPane.margin>
+                        <Insets left="300.0" />
+                     </GridPane.margin></Label>
+                  <Label text="Username" GridPane.rowIndex="1">
+                     <GridPane.margin>
+                        <Insets left="300.0" />
+                     </GridPane.margin></Label>
+                  <Label text="Confirm Password" GridPane.rowIndex="3">
+                     <GridPane.margin>
+                        <Insets left="300.0" />
+                     </GridPane.margin></Label>
+                  <Label text="Role" GridPane.rowIndex="4">
+                     <GridPane.margin>
+                        <Insets left="300.0" />
+                     </GridPane.margin></Label>
+                  <Label text="Email" GridPane.rowIndex="5">
+                     <GridPane.margin>
+                        <Insets left="300.0" />
+                     </GridPane.margin></Label>
+                  <TextField fx:id="textFieldUserUsername" alignment="CENTER_RIGHT" prefWidth="295.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <TextField fx:id="textFieldUserEmail" alignment="CENTER_RIGHT" prefWidth="295.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                  <Label text="Name">
+                     <GridPane.margin>
+                        <Insets left="300.0" />
+                     </GridPane.margin></Label>
+                  <TextField fx:id="textFieldUserName" alignment="CENTER_RIGHT" prefWidth="295.0" GridPane.columnIndex="1" />
+                  <ComboBox fx:id="comboBoxUserRole" prefHeight="25.0" prefWidth="295.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                  <PasswordField fx:id="textFieldUserPassword" alignment="CENTER_RIGHT" prefWidth="295.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <PasswordField fx:id="textFieldUserPasswordConf" alignment="CENTER_RIGHT" prefWidth="295.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                </children>
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -78,5 +92,10 @@
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding>
       </VBox>
+      <TitledPane alignment="CENTER" animated="false" collapsible="false" expanded="false" text="Edit User" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font>
+      </TitledPane>
    </children>
 </AnchorPane>
