--- a/src/views/DeliveryTicket.fxml
+++ b/src/views/DeliveryTicket.fxml
@@ -41,7 +41,7 @@
                               </Label>
                               <VBox prefHeight="545.0" prefWidth="410.0">
                                  <children>
-                                    <GridPane prefHeight="456.0" prefWidth="427.0" vgap="10.0">
+                                    <GridPane hgap="10.0" prefHeight="456.0" prefWidth="427.0" vgap="10.0">
                                        <columnConstraints>
                                           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="20.0" />
                                           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -57,20 +57,20 @@
                                           <RowConstraints minHeight="10.0" prefHeight="50.0" vgrow="SOMETIMES" />
                                        </rowConstraints>
                                        <children>
-                                          <Label text="Order Date" />
+                                          <Label alignment="CENTER_RIGHT" text="Order Date" GridPane.halignment="RIGHT" />
                                           <ComboBox id="comboBoxOrderTaker" fx:id="comboBoxOrderTaker" minWidth="250.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                                           <ComboBox fx:id="comboBoxPickupClient" minWidth="250.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                                           <ComboBox fx:id="comboBoxDeliveryClient" layoutX="164.0" layoutY="69.0" minWidth="250.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                                           <ComboBox fx:id="comboBoxPayingClient" layoutX="164.0" layoutY="99.0" minWidth="250.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
                                           <ComboBox fx:id="comboBoxCourier" layoutX="164.0" layoutY="159.0" minWidth="250.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-                                          <Label text="Order Taker" GridPane.rowIndex="1" />
-                                          <Label layoutX="10.0" layoutY="77.0" text="Delivery Client" GridPane.rowIndex="3" />
-                                          <Label layoutX="10.0" layoutY="107.0" text="Paying Client" GridPane.rowIndex="4" />
-                                          <Label layoutX="10.0" layoutY="137.0" text="Requested Pickup Time" GridPane.rowIndex="5" />
-                                          <Label layoutX="10.0" layoutY="167.0" text="Courier" GridPane.rowIndex="6" />
-                                          <Label layoutX="10.0" layoutY="197.0" text="Special Remarks" GridPane.rowIndex="7" />
+                                          <Label text="Order Taker" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
+                                          <Label layoutX="10.0" layoutY="77.0" text="Delivery Client" GridPane.halignment="RIGHT" GridPane.rowIndex="3" />
+                                          <Label layoutX="10.0" layoutY="107.0" text="Paying Client" GridPane.halignment="RIGHT" GridPane.rowIndex="4" />
+                                          <Label layoutX="10.0" layoutY="137.0" text="Requested Pickup Time" GridPane.halignment="RIGHT" GridPane.rowIndex="5" />
+                                          <Label layoutX="10.0" layoutY="167.0" text="Courier" GridPane.halignment="RIGHT" GridPane.rowIndex="6" />
+                                          <Label layoutX="10.0" layoutY="197.0" text="Special Remarks" GridPane.halignment="RIGHT" GridPane.rowIndex="7" />
                                           <DatePicker id="dateTimePickerOrderDate" fx:id="dateTimePickerOrderDate" minWidth="249.0" prefHeight="34.0" prefWidth="249.0" GridPane.columnIndex="1" />
-                                          <Label text="Pickup Client" GridPane.rowIndex="2" />
+                                          <Label text="Pickup Client" GridPane.halignment="RIGHT" GridPane.rowIndex="2" />
                                           <TextArea fx:id="textAreaSpecialRemarks" minWidth="239.0" prefHeight="56.0" prefWidth="239.0" GridPane.columnIndex="1" GridPane.rowIndex="7" />
                                           <VBox alignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="5">
                                              <children>
@@ -171,7 +171,7 @@
                                                 <Insets bottom="20.0" />
                                              </VBox.margin>
                                           </Label>
-                                          <GridPane prefHeight="349.0" prefWidth="465.0" vgap="10.0">
+                                          <GridPane hgap="10.0" prefHeight="349.0" prefWidth="465.0" vgap="10.0">
                                              <columnConstraints>
                                                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="30.0" />
                                                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -186,10 +186,10 @@
                                                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                              </rowConstraints>
                                              <children>
-                                                <Label text="Actual Departure Time" GridPane.rowIndex="1" />
-                                                <Label text="Actual Pickup Time" GridPane.rowIndex="2" />
-                                                <Label text="Actual Return Time" GridPane.rowIndex="4" />
-                                                <Label text="Actual Delivery Time" GridPane.rowIndex="3" />
+                                                <Label text="Actual Departure Time" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
+                                                <Label text="Actual Pickup Time" GridPane.halignment="RIGHT" GridPane.rowIndex="2" />
+                                                <Label text="Actual Return Time" GridPane.halignment="RIGHT" GridPane.rowIndex="4" />
+                                                <Label text="Actual Delivery Time" GridPane.halignment="RIGHT" GridPane.rowIndex="3" />
                                                 <CheckBox fx:id="chkBoxDeliveryConfirmed" mnemonicParsing="false" prefHeight="25.0" text="Delivery Confirmed" GridPane.columnIndex="1" GridPane.rowIndex="5">
                                                    <padding>
                                                       <Insets bottom="1.0" left="1.0" right="1.0" top="1.0" />
