--- a/src/views/EditClient.fxml
+++ b/src/views/EditClient.fxml
@@ -35,18 +35,18 @@
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <TextField fx:id="textFieldClientNumber" alignment="CENTER_RIGHT" GridPane.columnIndex="1" />
-                        <TextField fx:id="textFieldClientName" alignment="CENTER_RIGHT" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                        <TextField fx:id="textFieldDeliveryInstructions" alignment="CENTER_RIGHT" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                        <Label text="Client Number" />
-                        <Label text="Name" GridPane.rowIndex="1" />
-                        <Label text="Street" GridPane.rowIndex="2" />
-                        <Label text="Avenue" GridPane.rowIndex="3" />
-                        <Label text="Delivery Instructions" GridPane.rowIndex="4" />
-                        <Label text="Phone Number" GridPane.rowIndex="5" />
-                        <TextField fx:id="textFieldPhoneNumber" alignment="CENTER_RIGHT" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-                        <Label text="Email" GridPane.rowIndex="6" />
-                        <TextField fx:id="textFieldEmail" alignment="CENTER_RIGHT" prefHeight="61.0" prefWidth="269.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                        <TextField fx:id="textFieldClientNumber" GridPane.columnIndex="1" />
+                        <TextField fx:id="textFieldClientName" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <TextField fx:id="textFieldDeliveryInstructions" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                        <Label text="Client Number" GridPane.halignment="RIGHT" />
+                        <Label text="Name" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
+                        <Label text="Street" GridPane.halignment="RIGHT" GridPane.rowIndex="2" />
+                        <Label text="Avenue" GridPane.halignment="RIGHT" GridPane.rowIndex="3" />
+                        <Label text="Delivery Instructions" GridPane.halignment="RIGHT" GridPane.rowIndex="4" />
+                        <Label text="Phone Number" GridPane.halignment="RIGHT" GridPane.rowIndex="5" />
+                        <TextField fx:id="textFieldPhoneNumber" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                        <Label text="Email" GridPane.halignment="RIGHT" GridPane.rowIndex="6" />
+                        <TextField fx:id="textFieldEmail" prefHeight="61.0" prefWidth="269.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
                         <ComboBox fx:id="comboBoxAvenue" prefHeight="25.0" prefWidth="253.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                         <ComboBox fx:id="comboBoxStreet" prefHeight="25.0" prefWidth="255.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                      </children>
