--- a/src/views/EditCourier.fxml
+++ b/src/views/EditCourier.fxml
@@ -37,30 +37,30 @@
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                </rowConstraints>
                <children>
-                  <Label text="Name" GridPane.rowIndex="1">
+                  <Label text="Name" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
                      <padding>
                         <Insets left="300.0" />
                      </padding>
                   </Label>
-                  <Label text="Number">
+                  <Label text="Number" GridPane.halignment="RIGHT">
                      <padding>
                         <Insets left="300.0" />
                      </padding>
                   </Label>
-                  <TextField fx:id="textFieldCourierNumber" alignment="CENTER_RIGHT" minWidth="295.0" prefHeight="25.0" prefWidth="295.0" GridPane.columnIndex="1" />
-                  <Label text="Phone Number" GridPane.rowIndex="2">
+                  <TextField fx:id="textFieldCourierNumber" minWidth="295.0" prefHeight="25.0" prefWidth="295.0" GridPane.columnIndex="1" />
+                  <Label text="Phone Number" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
                      <GridPane.margin>
                         <Insets left="300.0" />
                      </GridPane.margin>
                   </Label>
-                  <Label text="Is Active" GridPane.rowIndex="3">
+                  <Label text="Is Active" GridPane.halignment="RIGHT" GridPane.rowIndex="3">
                      <GridPane.margin>
                         <Insets left="300.0" />
                      </GridPane.margin>
                   </Label>
                   <CheckBox fx:id="checkBoxCourierIsActive" mnemonicParsing="false" text="Active" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                  <TextField fx:id="textFieldCourierName" alignment="CENTER_RIGHT" prefWidth="295.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <TextField fx:id="textFieldCourierPhoneNumber" alignment="CENTER_RIGHT" prefWidth="295.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <TextField fx:id="textFieldCourierName" prefWidth="295.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <TextField fx:id="textFieldCourierPhoneNumber" prefWidth="295.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                </children>
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
