--- a/src/views/EditUser.fxml
+++ b/src/views/EditUser.fxml
@@ -19,7 +19,7 @@
    <children>
       <VBox alignment="CENTER" prefHeight="400.0" prefWidth="950.0" spacing="10.0">
          <children>
-            <GridPane hgap="5.0" prefHeight="220.0" prefWidth="323.0" vgap="5.0">
+            <GridPane hgap="10.0" prefHeight="220.0" prefWidth="323.0" vgap="5.0">
                <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                   <ColumnConstraints fillWidth="false" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -33,36 +33,36 @@
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                </rowConstraints>
                <children>
-                  <Label text="Password" GridPane.rowIndex="2">
+                  <Label text="Password" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
                      <GridPane.margin>
                         <Insets left="300.0" />
                      </GridPane.margin></Label>
-                  <Label text="Username" GridPane.rowIndex="1">
+                  <Label text="Username" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
                      <GridPane.margin>
                         <Insets left="300.0" />
                      </GridPane.margin></Label>
-                  <Label text="Confirm Password" GridPane.rowIndex="3">
+                  <Label text="Confirm Password" GridPane.halignment="RIGHT" GridPane.rowIndex="3">
                      <GridPane.margin>
                         <Insets left="300.0" />
                      </GridPane.margin></Label>
-                  <Label text="Role" GridPane.rowIndex="4">
+                  <Label text="Role" GridPane.halignment="RIGHT" GridPane.rowIndex="4">
                      <GridPane.margin>
                         <Insets left="300.0" />
                      </GridPane.margin></Label>
-                  <Label text="Email" GridPane.rowIndex="5">
+                  <Label text="Email" GridPane.halignment="RIGHT" GridPane.rowIndex="5">
                      <GridPane.margin>
                         <Insets left="300.0" />
                      </GridPane.margin></Label>
-                  <TextField fx:id="textFieldUserUsername" alignment="CENTER_RIGHT" prefWidth="295.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <TextField fx:id="textFieldUserEmail" alignment="CENTER_RIGHT" prefWidth="295.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-                  <Label text="Name">
+                  <TextField fx:id="textFieldUserUsername" prefWidth="295.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <TextField fx:id="textFieldUserEmail" prefWidth="295.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                  <Label text="Name" GridPane.halignment="RIGHT">
                      <GridPane.margin>
                         <Insets left="300.0" />
                      </GridPane.margin></Label>
-                  <TextField fx:id="textFieldUserName" alignment="CENTER_RIGHT" prefWidth="295.0" GridPane.columnIndex="1" />
+                  <TextField fx:id="textFieldUserName" prefWidth="295.0" GridPane.columnIndex="1" />
                   <ComboBox fx:id="comboBoxUserRole" prefHeight="25.0" prefWidth="295.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                  <PasswordField fx:id="textFieldUserPassword" alignment="CENTER_RIGHT" prefWidth="295.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                  <PasswordField fx:id="textFieldUserPasswordConf" alignment="CENTER_RIGHT" prefWidth="295.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                  <PasswordField fx:id="textFieldUserPassword" prefWidth="295.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <PasswordField fx:id="textFieldUserPasswordConf" prefWidth="295.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                </children>
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
